--- a/views/formulario_interes.hbs
+++ b/views/formulario_interes.hbs
@@ -10,8 +10,8 @@
     <input type="text" name="tasaInteres" id="tasaInteres" class="form-control">
   </div>
   <div class="form-group">
-    <label for="periodo">Período (años)</label>
-    <input type="text" name="periodo" id="periodo" class="form-control">
+    <label for="tiempo">Tiempo (Años)</label>
+    <input type="text" name="tiempo" id="tiempo" class="form-control">
   </div>
   <button type="submit" class="btn btn-primary">Calcular</button>
 </form>
