--- a/views/formulario_interes.hbs
+++ b/views/formulario_interes.hbs
@@ -2,7 +2,7 @@
 
 <form action="/prestamo" method="post">
   <div class="form-group">
-    <label for="monto">Monto del préstamo</label>
+    <label for="monto">Monto </label>
     <input type="text" name="monto" id="monto" class="form-control">
   </div>
   <div class="form-group">
